<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lbl_last_pos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_last_geoposition" />

    <TextView
        android:id="@+id/lbl_lon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_longitude" />

    <TextView
        android:id="@+id/lbl_lat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_latitude" />

    <TextView
        android:id="@+id/lbl_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_status" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartClick"
        android:text="@string/btn_start" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onStopClick"
        android:text="@string/btn_stop" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onLogoutClick"
        android:text="@string/btn_logut" />

</LinearLayout>